deploy/base/api-stripprefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: hashpost
spec:
  stripPrefix:
    prefixes:
      - /api
