deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hashpost
  labels:
    name: hashpost
